--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Лучшая выпечка в городе!</title>
+    <title>Лучшая выпечка во вселенной!</title>
   </head>
   <body>
     <header>
