добавил немножко анимаций и поправил отступы

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <img
+      <img class="logo"
         src="img/logo.svg"
         alt="логотип пекарни"
       />
@@ -45,13 +45,13 @@
       </section>
       <section class="section-description">
         <div class="section-description__icon-box">
-          <img
+          <img class="icon"
             src="img/icon1.svg"
             alt="Иконка пекарни 1"
-          /><img
+          /><img class="icon"
             src="img/icon2.svg"
             alt="Иконка пекарни 1"
-          /><img
+          /><img class="icon"
             src="img/icon3.svg"
             alt="Иконка пекарни 3"
           />
