--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Самая лучшая выпечка в городе!" />
-    <link
-      rel="stylesheet"
-      href="css/style.css"
-    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
@@ -16,10 +14,7 @@
   </head>
   <body>
     <header>
-      <img class="logo"
-        src="img/logo.svg"
-        alt="логотип пекарни"
-      />
+      <img class="logo" src="img/logo.svg" alt="логотип пекарни" />
     </header>
     <nav>
       <ul>
@@ -43,18 +38,21 @@
           </div>
         </div>
       </section>
+      <section class="block-adaptive">
+        <details class="block-adaptive__text">
+          <summary class="block-adaptive__title">Специальный заказ</summary>
+          Таким образом начало повседневной работы по формированию позиции
+          способствует подготовки и реализации существенных финансовых и
+          административных условий. Значимость этих проблем настолько очевидна.
+        </details>
+      </section>
       <section class="section-description">
         <div class="section-description__icon-box">
-          <img class="icon"
-            src="img/icon1.svg"
-            alt="Иконка пекарни 1"
-          /><img class="icon"
+          <img class="icon" src="img/icon1.svg" alt="Иконка пекарни 1" /><img
+            class="icon"
             src="img/icon2.svg"
             alt="Иконка пекарни 1"
-          /><img class="icon"
-            src="img/icon3.svg"
-            alt="Иконка пекарни 3"
-          />
+          /><img class="icon" src="img/icon3.svg" alt="Иконка пекарни 3" />
         </div>
         <div class="section-description__text-box">
           <h2 class="section-description__title">
@@ -75,7 +73,7 @@
         <h3 class="section-map__title">Заказать</h3>
         <iframe
           src="https://yandex.ru/map-widget/v1/?display-text=%D0%9F%D0%B5%D0%BA%D0%B0%D1%80%D0%BD%D1%8F&filter=alternate_vertical%3ARequestWindow&ll=40.976716%2C57.010402&mode=search&oid=114665974122&ol=biz&sctx=ZAAAAAgBEAAaKAoSCWtGBrmLfERAEWnJ42n5f0xAEhIJJSTSNv5ExT8RoaLqVzofrj8iBgABAgMEBSgKOABA2qgNSAFqAnJ1nQHNzMw9oAEAqAEAvQEWX8RTwgGVAZ2tj72xBJzI%2BMiEAproqq0GiZWrmcUDpZ7Sm9wCz4awxde1kbxZ6tL%2FlKsDi5e7nJYGyffUyacC1aSiw0%2B1mbCGBYfO5v%2FlBu3f5sTuBeHByvS9BbWijsyNB%2B7IwoXhAs67lPD8AfOyhfHDBNXgoPnaBfLCm%2BriBvj07cuaBNPVw%2FSnAdSt6IKzAfmb7cDOBfiawchaggIbKChjYXRlZ29yeV9pZDooMTg0MTA2Nzk4KSkpigIJMTg0MTA2Nzk4kgIAmgIMZGVza3RvcC1tYXBzqgILNzY3MzkzNjg0MTI%3D&sll=40.973172%2C57.010402&sspn=0.017833%2C0.006312&text=%7B%22text%22%3A%22%D0%9F%D0%B5%D0%BA%D0%B0%D1%80%D0%BD%D1%8F%22%2C%22what%22%3A%5B%7B%22attr_name%22%3A%22category_id%22%2C%22attr_values%22%3A%5B%22184106798%22%5D%7D%5D%7D&utm_campaign=desktop&utm_medium=search&utm_source=maps&z=16.22"
-          width="900"
+          width="90%"
           height="400"
           frameborder="0"
           allowfullscreen="true"
@@ -96,7 +94,3 @@
     </footer>
   </body>
 </html>
-
-
-
-
